# AsyncSC

./: .gitignore  CMakeLists.txt  TODO  conanfile.txt
libs/include/: connection.h  package.h  tcp_server.h
libs/src/: connection.cpp  package.cpp  tcp_server.cpp
scripts/: format.sh
src/: client.cpp  mainwindow.cpp  mainwindow.h  server.cpp
src/lib/: connection.cpp  connection.h  package.cpp  package.h  tcp_client.h  tcp_server.cpp  tcp_server.h
ui_forms/: mainwindow.ui  ui_mainwindow.h
